# CTF-cord

./: .dmypy.json  .env.example  .gitignore  Dockerfile  Pipfile  README.md  config.py  deploy.sh  docker-compose.yml  main.py  pyproject.toml
bot/: .gitignore  Dockerfile  config.py  main.py  requirements.txt
bot/cogs/: chall.py  ctf.py  ctf.py~  dev.py  settings.py  teams.py  teams.py~
cogs/: ctf.py  teams.py
mysql/: .gitignore  Dockerfile
mysql/schema/: schema.sql
src/: Dockerfile  docker-compose.yml  main.py
src/cogs/: chall.py  ctf.py  dev.py
src/util/: chall.py  ctf.py  db.py
