[project]
name = "ctf-cord"
version = ""
description = ""
authors = [
    {name = "samuzora", email = "lucastanyj@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}

[tool.poetry]
name = "ctf-cord"
version = "0.1.0"
description = ""
authors = ["samuzora <lucastanyj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "*"
regex = "*"
py-cord = "*"
zodb = "*"
btrees = "*"
sqlalchemy = "*"


[tool.poetry.group.dev.dependencies]
types-regex = "*"
types-requests = "*"
typing-extensions = "*"
zodbbrowser = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
