[project]
name = "ctf-cord"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "py-cord>=2.6.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.38",
]
